# qa_umbrella

./: .env  .env.example  .gitignore  README.md  llm_test.txt  ollama_config.py  pyproject copy.toml  pyproject.toml  requirements.txt  run_demo.py  start_ollama.py  test_loader.py  test_ollama.py
configs/: runtime.yaml
ppai_test_umbrella/: __init__.py
ppai_test_umbrella.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ppai_test_umbrella/agents/: automation_agent.py  rag_agent.py  self_healing_agent.py  test_design_agent.py
ppai_test_umbrella/apps/: api.py  cli.py  cli_runner.py  mcp_chat_agent.py  mcp_client_cli.py
ppai_test_umbrella/examples/: login_steps.txt  sample_requirement.md  self_healing_playwright_helper.py
ppai_test_umbrella/mcp/: client.py  server.py
ppai_test_umbrella/modules/: execution_service.py  prototype_service.py
ppai_test_umbrella/modules/requirement_intelligence/: exporter.py  loader.py  prompt_builder.py  requirement_processor.py  scenario_generator.py  scenario_service.py
ppai_test_umbrella/shared/: io_utils.py  models.py  settings.py
ppai_test_umbrella/shared/llm/: ollama_client.py
reqs/: Section_I2.docx  sample.txt
runtime_data/healing_memory/: locator_memory.json
runtime_data/knowledge/: index.json
utils/: timers.py
