[project]
name = "ppai-test-umbrella"
version = "0.1.0"
description = "Basic working prototype for AI-assisted QA orchestration with RAG, MCP, and self-healing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "annotated-doc>=0.0.4",
  "annotated-types>=0.7.0",
  "antlr4-python3-runtime>=4.9.3",
  "anyio>=4.13.0",
  "audioop-lts>=0.0.1",
  "audioread>=3.1.0",
  "boltons>=25.0.0",
  "brotlicffi>=1.0.9.2",
  "certifi>=2026.2.25",
  "cffi>=2.0.0",
  "charset-normalizer>=3.4.7",
  "click>=8.1,<8.2",
  "cloudpickle>=3.1.2",
  "colorama>=0.4.6",
  "cryptography>=46.0.7",
  "decorator>=5.2.1",
  "demucs>=4.0.1",
  "distro>=1.9.0",
  "dora-search>=0.1.12",
  "einops>=0.8.1",
  "fastapi>=0.135.3",
  "filelock>=3.20.0",
  "frozendict>=2.4.6",
  "fsspec>=2025.10.0",
  "h11>=0.16.0",
  "httpcore>=1.0.9",
  "httpx>=0.28.1",
  "idna>=3.11",
  "jaraco.classes>=3.4.0",
  "jaraco.functools>=4.1.0",
  "Jinja2>=3.1.6",
  "jiter>=0.14.0",
  "joblib>=1.5.2",
  "jsonpatch>=1.33",
  "jsonpointer>=3.0.0",
  "julius>=0.2.7",
  "keyring>=25.6.0",
  "lameenc>=1.8.1",
  "lazy-loader>=0.4",
  "librosa>=0.11.0",
  "llvmlite>=0.45.1",
  "lxml>=6.0.3",
  "markdown-it-py>=4.0.0",
  "MarkupSafe>=3.0.3",
  "mdurl>=0.1.2",
  "more-itertools>=10.8.0",
  "mpmath>=1.3.0",
  "msgpack>=1.1.2",
  "networkx>=3.6",
  "numba>=0.62.1",
  "numpy>=2.3.5",
  "omegaconf>=2.3.0",
  "openai>=2.31.0",
  "openunmix>=1.3.0",
  "packaging>=25.0",
  "pdfminer.six>=20251230",
  "pdfplumber>=0.11.9",
  "pillow>=12.2.0",
  "pkce>=1.0.3",
  "platformdirs>=4.5.0",
  "pluggy>=1.5.0",
  "pooch>=1.8.2",
  "pycparser>=3.0",
  "pydantic>=2.13.0",
  "pydantic-core>=2.46.0",
  "pydantic-settings>=2.10.1",
  "Pygments>=2.20.0",
  "PyJWT>=2.10.1",
  "pypdf>=6.10.0",
  "PyPDF2>=3.0.1",
  "pypdfium2>=5.7.0",
  "PySocks>=1.7.1",
  "python-docx>=1.2.0",
  "python-dotenv>=1.2.2",
  "pywin32-ctypes>=0.2.2",
  "pyyaml>=6.0.3",
  "readchar>=4.2.1",
  "reportlab>=4.4.10",
  "requests>=2.33.1",
  "retrying>=1.4.2",
  "rich>=14.3.4",
  "ruamel.yaml>=0.18.16",
  "ruamel.yaml.clib>=0.2.14",
  "scikit-learn>=1.7.2",
  "scipy>=1.16.3",
  "semver>=3.0.4",
  "shellingham>=1.5.4",
  "sniffio>=1.3.1",
  "soundfile>=0.13.1",
  "soxr>=1.0.0",
  "standard-aifc>=3.13.0",
  "standard-chunk>=3.13.0",
  "standard-sunau>=3.13.0",
  "starlette>=1.0.0",
  "submitit>=1.5.3",
  "sympy>=1.14.0",
  "threadpoolctl>=3.6.0",
  "tomli>=2.2.1",
  "torch>=2.9.1",
  "torchaudio>=2.9.1",
  "tqdm>=4.67.3",
  "treetable>=0.2.6",
  "truststore>=0.10.1",
  "typer>=0.12.3,<0.18",
  "typing-inspection>=0.4.2",
  "typing_extensions>=4.15.0",
  "urllib3>=2.6.3",
  "uvicorn>=0.44.0",
  "win-inet-pton>=1.1.0",
  "zstandard>=0.24.0",
]

[project.optional-dependencies]
mcp = [
  "mcp>=1.0.0",
]
playwright = [
  "playwright>=1.52.0",
  "pytest>=8.0.0",
]

[project.scripts]
ppai = "ppai_test_umbrella.apps.cli:app"
ppai-api = "ppai_test_umbrella.apps.api:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ppai_test_umbrella*"]
exclude = ["runtime_data*"]
